# diaspy

./: .gitignore  README.md  pyproject.toml
examples/: diaspy_demo.ipynb  diaspy_demo.py  hierarchical_mvps.md  testing_dspy_game.ipynb
examples/.ipynb_checkpoints/: basic_dialectic-checkpoint.py  diaspy_demo-checkpoint.py  testing_dspy_game-checkpoint.ipynb
examples/.virtual_documents/: diaspy_demo.ipynb
src/diaspy/: __init__.py  agents.py  cli.py  responders.py  signatures.py  utils.py
tests/: test_agents.py  test_qc.py  test_responders.py
